# GHDpt-cpp

./: CMakeLists.txt  CMakeSettings.json  README.md  amain.cpp  renderer copy.h
src/: main.cpp
src/primitives/: camera.h
src/utils/: color.h  image.h  raw_image.h  renderer.h  scenes.h
